102 Update Extra and Archive

--- a/102 - More C++ Classes/102-master/footballer/Makefile
+++ b/102 - More C++ Classes/102-master/footballer/Makefile
@@ -6,8 +6,8 @@ CFLAGS=-c -Wall -std=c++11
 
 all: main.exe
 
-main.exe: main.o Person.o Footballer.o
-	$(CC) main.o Person.o Footballer.o -o main.exe
+main.exe: main.o Person.o Footballer.o Gameplayer.o
+	$(CC) main.o Person.o Footballer.o Gameplayer.o -o main.exe
 
 main.o: main.cpp
 	$(CC) $(CFLAGS) main.cpp
@@ -15,6 +15,9 @@ main.o: main.cpp
 Footballer.o: Footballer.cpp
 	$(CC) $(CFLAGS) Footballer.cpp
 
+Gameplayer.o: Gameplayer.cpp
+	$(CC) $(CFLAGS) Gameplayer.cpp
+	
 Person.o: Person.cpp
 	$(CC) $(CFLAGS) Person.cpp
 
