--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,38 @@ Thumbs.db
 ehthumbs.db
 Desktop.ini
 
-# for Mac OS X System Files
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Mac Crap
+
 .DS_Store
-Thumbs.db
+
+# VSCode
+
+.vscode/
