--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ Desktop.ini
 # Compiled Dynamic libraries
 *.so
 *.dylib
-*.dll
+#*.dll
 
 # Fortran module files
 *.mod
@@ -31,7 +31,7 @@ Desktop.ini
 *.lai
 *.la
 *.a
-*.lib
+#*.lib
 
 # Mac Crap
 
